[package]
name = "fetch_file"
version = "0.1.0"
authors = ["matthew.bradford <matthew.bradford@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.1.1"
ron = "0.4.1"
serde = { version="*", features=["serde_derive"] }
serde_json = "1.0.40"