[package]
name = "fetch_file"
version = "0.1.0"
authors = ["matthew.bradford <matthew.bradford@tutanota.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/matthew-bradford/fetch_file"
description = """
Use a struct for a quick config file
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.1.4"
ron = "0.5.1"
serde = { version="1.0.101", features=["serde_derive"] }
serde_json = "1.0.40"